fix global styling that made content overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,4 +35,15 @@ header a {
   overflow-x: auto;
   transition: filter 0.5s ease-in-out;
   filter: grayscale(0);
+
+  @nest & > * {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+
+    @nest & > *[role="main"] {
+      flex: 1;
+    }
+  }
 }
